--- a/dog.html
+++ b/dog.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1><a href="index.html">Aniaml</a></h1>
+    <h1><a href="index.html">Animal</a></h1>
 
     <ol>
 	    <li><a href="cat.html">Cat</a></li>
