--- a/monkey.html
+++ b/monkey.html
@@ -14,16 +14,16 @@
         <li><a href="monkey.html">Monkey</a></li>
     </ol>
 
-    
-    <h2>Dog</h2>
+
+    <h2>Monkey</h2>
     <p>
-    A dog is <strong>a friendly,social <u>animal</u></strong> that people often keep as a pet.<br>
-    <img src="https://images.unsplash.com/photo-1534361960057-19889db9621e?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8ZG9nfGVufDB8fDB8fHww" width="40%"><br>
-    Dogs like to play and are usually louder.
+    A monkey is <strong>a small to medium-sized <u>animal</u></strong> that lives in trees.<br>
+    <img src="https://images.unsplash.com/photo-1540573133985-87b6da6d54a9?q=80&w=1176&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="50%"><br>
+    Monkeys like to climb and are usually playful and active.
     </p>
     <p style="margin-top:25px;">
-    <a href="https://terms.naver.com/entry.naver?docId=1921965&cid=41810&categoryId=41811"
-    target="_blank" title="General English Dictionary">about dogs</a>
+    <a href="http://terms.naver.com/entry.naver?docId=1921911&cid=41810&categoryId=41811"
+    target="_blank" title="General English Dictionary">about monkey</a>
     </p>
     <p>
 <div id="disqus_thread"></div>
