--- a/cat.html
+++ b/cat.html
@@ -11,6 +11,7 @@
     <ol>
 	    <li><a href="cat.html">Cat</a></li>
 	    <li><a href="dog.html">Dog</a></li>
+        <li><a href="monkey.html">Monkey</a></li>
     </ol>
 
 
