--- a/cat.html
+++ b/cat.html
@@ -3,52 +3,55 @@
 <head>
     <title>Animal-HTML</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1><a href="index.html">Animal</a></h1>
-
-    <ol>
-	    <li><a href="cat.html">Cat</a></li>
-	    <li><a href="dog.html">Dog</a></li>
-        <li><a href="monkey.html">Monkey</a></li>
-    </ol>
-
-
-    <h2>Cat</h2>
+    <div id="grid">
+        <ol>
+            <li><a href="cat.html">Cat</a></li>
+            <li><a href="dog.html">Dog</a></li>
+            <li><a href="monkey.html">Monkey</a></li>
+        </ol>
+        <div>
+            <h2>Cat</h2>
+            <p>
+                A cat is <strong>a small, indepedent <u>animal</u></strong> that people often keep as a pet.<br>
+                <img src="https://images.unsplash.com/photo-1543852786-1cf6624b9987?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="30%"><br>
+                Cats like to climb and are usually quieter.
+            </p>
+            <p style="margin-top:25px;">
+                <a href="http://terms.naver.com/entry.naver?docId=1921911&cid=41810&categoryId=41811"
+                target="_blank" title="General English Dictionary">about cats</a>
+            </p>
+        </div>
+    </div>
+    
     <p>
-    A cat is <strong>a small, indepedent <u>animal</u></strong> that people often keep as a pet.<br>
-    <img src="https://images.unsplash.com/photo-1543852786-1cf6624b9987?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="30%"><br>
-    Cats like to climb and are usually quieter.
-    </p>
-    <p style="margin-top:25px;">
-    <a href="http://terms.naver.com/entry.naver?docId=1921911&cid=41810&categoryId=41811"
-    target="_blank" title="General English Dictionary">about cats</a>
-    </p>
-    <p>
-<div id="disqus_thread"></div>
-<script>
-(function() {
-var d = document, s = d.createElement('script');
-s.src = 'https://web1-2.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        <div id="disqus_thread"></div>
+        <script>
+            (function() {
+            var d = document, s = d.createElement('script');
+            s.src = 'https://web1-2.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     </p>
 
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/686496c6988cbd190bbeade0/1iv4epund';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
+    <script type="text/javascript">
+        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+        (function(){
+        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+        s1.async=true;
+        s1.src='https://embed.tawk.to/686496c6988cbd190bbeade0/1iv4epund';
+        s1.charset='UTF-8';
+        s1.setAttribute('crossorigin','*');
+        s0.parentNode.insertBefore(s1,s0);
+        })();
+    </script>
 
 </body>
 </html>
