--- a/monkey.html
+++ b/monkey.html
@@ -21,37 +21,38 @@
                 <img src="https://images.unsplash.com/photo-1540573133985-87b6da6d54a9?q=80&w=1176&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="50%"><br>
                 Monkeys like to climb and are usually playful and active.
             </p>
-                <p style="margin-top:25px;">
+            <p style="margin-top:25px;">
                 <a href="https://terms.naver.com/entry.naver?docId=1131202&cid=40942&categoryId=32633"
                 target="_blank" title="General English Dictionary">about monkey</a>
             </p>
         </div>
     </div>
 
-    <p>
-        <div id="disqus_thread"></div>
-        <script>
-            (function() {
+    <div id="disqus_thread"></div>
+    <script>
+        (function() {
             var d = document, s = d.createElement('script');
             s.src = 'https://web1-2.disqus.com/embed.js';
             s.setAttribute('data-timestamp', +new Date());
             (d.head || d.body).appendChild(s);
-            })();
-        </script>
-        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    </p>
-
-    <script type="text/javascript">
-        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-        (function(){
-        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-        s1.async=true;
-        s1.src='https://embed.tawk.to/686496c6988cbd190bbeade0/1iv4epund';
-        s1.charset='UTF-8';
-        s1.setAttribute('crossorigin','*');
-        s0.parentNode.insertBefore(s1,s0);
         })();
     </script>
+    <noscript>
+        Please enable JavaScript to view the 
+        <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+    </noscript>
 
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function() {
+            var s1 = document.createElement("script"),
+                s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/686496c6988cbd190bbeade0/1iv4epund';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
 </body>
 </html>
