--- a/dog.html
+++ b/dog.html
@@ -21,35 +21,37 @@
                 <img src="https://images.unsplash.com/photo-1534361960057-19889db9621e?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8ZG9nfGVufDB8fDB8fHww" width="40%"><br>
                 Dogs like to play and are usually louder.
             </p>
-                <p style="margin-top:25px;">
+            <p style="margin-top:25px;">
                 <a href="https://terms.naver.com/entry.naver?docId=1921965&cid=41810&categoryId=41811"
                 target="_blank" title="General English Dictionary">about dogs</a>
             </p>
         </div>
     </div>
 
-    <p>
-        <div id="disqus_thread"></div>
-        <script>
-            (function() {
+    <div id="disqus_thread"></div>
+    <script>
+        (function() {
             var d = document, s = d.createElement('script');
             s.src = 'https://web1-2.disqus.com/embed.js';
             s.setAttribute('data-timestamp', +new Date());
             (d.head || d.body).appendChild(s);
-            })();
-        </script>
-        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    </p>
+        })();
+    </script>
+    <noscript>
+        Please enable JavaScript to view the
+        <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+    </noscript>
 
     <script type="text/javascript">
-        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-        (function(){
-        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-        s1.async=true;
-        s1.src='https://embed.tawk.to/686496c6988cbd190bbeade0/1iv4epund';
-        s1.charset='UTF-8';
-        s1.setAttribute('crossorigin','*');
-        s0.parentNode.insertBefore(s1,s0);
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function() {
+            var s1 = document.createElement("script"),
+                s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/686496c6988cbd190bbeade0/1iv4epund';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
         })();
     </script>
 </body>
