--- a/index.html
+++ b/index.html
@@ -15,39 +15,38 @@
             <li><a href="monkey.html">Monkey</a></li>
         </ol>
         <div>
-            <p>
-                <h2>Animal</h2>
-                A living creature that is not a plant, human, or microorganism.
-            </p>
+            <h2>Animal</h2>
+            <p>A living creature that is not a plant, human, or microorganism.</p>
         </div>
     </div>
     <br>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Ox4OkCeYJkE?si=QQyytlLPRCJ5QQ48" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     
-    <p>
-        <div id="disqus_thread"></div>
-        <script>
-            (function() {
+    <div id="disqus_thread"></div>
+    <script>
+        (function() {
             var d = document, s = d.createElement('script');
             s.src = 'https://web1-2.disqus.com/embed.js';
             s.setAttribute('data-timestamp', +new Date());
             (d.head || d.body).appendChild(s);
-            })();
-        </script>
-        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    </p>
-
-    <script type="text/javascript">
-        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-        (function(){
-        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-        s1.async=true;
-        s1.src='https://embed.tawk.to/686496c6988cbd190bbeade0/1iv4epund';
-        s1.charset='UTF-8';
-        s1.setAttribute('crossorigin','*');
-        s0.parentNode.insertBefore(s1,s0);
         })();
     </script>
+    <noscript>
+        Please enable JavaScript to view the 
+        <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+    </noscript>
 
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function() {
+            var s1 = document.createElement("script"),
+                s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/686496c6988cbd190bbeade0/1iv4epund';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
 </body>
 </html>
